# darkerbit.github.io

./: .gitignore  README.md  index.md  pyproject.toml
assets/: datetime.js  stylesheet.css
ssg/: __main__.py  pages.py
tech/: dire-desktop-gui.md  disncord-oscide-oct22.md  index.md  markdown.md  test.md
templates/: category.html  head.html  header.html  index.html  markdown.html  page.html
writeups/: test.md
