[tool.poetry]
name = "darkerbit.github.io"
version = "0.1.0"
description = "Code that generates my website."
authors = ["darkerbit <mail.darkerbit@gmail.com>"]
license = "Zlib"
homepage = "https://darkerbit.github.io"
packages = [
    { include = "ssg" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ssg = "ssg.__main__:main"
